Correciones a errores de Testeo encontradas